style.css
/* ... */
.grid .grid3 {
  -ms-grid-row: 2;
  -ms-grid-row-span: 2;
  -ms-grid-column: 2;
  grid-area: grid3;
  background: violet;
}

.grid .grid4 {
  -ms-grid-row: 2;
  -ms-grid-row-span: 3;
  -ms-grid-column: 3;
  grid-area: grid4;
  background: aqua;
}

.grid .grid5 {
  -ms-grid-row: 2;
  -ms-grid-column: 4;
  grid-area: grid5;
  background: aquamarine;
}

.grid .grid6 {
  -ms-grid-row: 4;
  -ms-grid-column: 2;
  grid-area: grid6;
  background: brown;
}

.grid .grid7 {
  -ms-grid-row: 3;
  -ms-grid-row-span: 2;
  -ms-grid-column: 4;
  grid-area: grid7;
  background: seagreen;
}

.container {
  max-width: 1440px;
  margin: auto;
}

.search__h1 {
  font-size: 2rem;
  margin-bottom: 10px;
}

.search__input {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-top: 20px;
}

.search__icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 50px;
  background: var(--tertiary);
  padding: 1rem;
  border-radius: 10px 0 0 10px;
}

.search__bar {
  height: 50px;
  max-width: 60%;
  border: none;
  border: 1px solid var(--tertiary);
  padding: 1.2rem;
  outline: none;
}

.search__bar:hover {
  border: 1px solid var(--secondary);
}

.search__bar:focus {
  border-color: #4d90fe;
}

.search__bar::-webkit-input-placeholder {
  color: var(--txt-body);
  font-size: 1rem;
  font-weight: 600;
}

.search__bar:-ms-input-placeholder {
  color: var(--txt-body);
  font-size: 1rem;
  font-weight: 600;
}

.search__bar::-ms-input-placeholder {
  color: var(--txt-body);
  font-size: 1rem;
  font-weight: 600;
}

.search__bar::placeholder {
  color: var(--txt-body);
  font-size: 1rem;
  font-weight: 600;
}

.search__btn {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 50px;
  color: white;
  font-size: 1rem;
  background: var(--primary);
  cursor: pointer;
  border: none;
  padding: 1rem;
  border-radius: 0 10px 10px 0;
}

.search__btn--text {
  display: none;
}

.search__btn--icon {
  display: block;
}

@media screen and (min-width: 768px) {
  .search__bar {
    width: 250px;
  }
  .search__btn {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    height: 50px;
    color: white;
    font-size: 1rem;
    background: var(--primary);
    cursor: pointer;
    border: none;
    padding: 1rem;
    border-radius: 0 10px 10px 0;
  }
  .search__btn--text {
    display: block;
    font-weight: bold;
  }
  .search__btn--icon {
    display: none !important;
  }
}

.popular-hosting {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  gap: 30px 0px;
}

@media screen and (min-width: 1200px) {
  .popular-hosting {
    -ms-grid-columns: 6fr 3fr;
        grid-template-columns: 6fr 3fr;
    -webkit-column-gap: 30px;
            column-gap: 30px;
  }
}

.popular {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: auto (1fr)[3];
      grid-template-rows: auto repeat(3, 1fr);
  gap: 15px 0px;
  background: #F2F2F2;
  padding: 15px;
  border-radius: 20px;
}

.popular__header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.popular__h3 {
  margin-bottom: 20px;
}

.hosting {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: auto (1fr)[6];
      grid-template-rows: auto repeat(6, 1fr);
  gap: 15px 0px;
  width: 100%;
  background: #F2F2F2;
  padding: 15px;
  border-radius: 20px;
}

.hosting__h3 {
  margin-bottom: 20px;
}

@media screen and (min-width: 768px) {
  .hosting {
    -ms-grid-columns: (1fr)[2];
        grid-template-columns: repeat(2, 1fr);
    -ms-grid-rows: auto (1fr)[3];
        grid-template-rows: auto repeat(3, 1fr);
    -webkit-column-gap: 2rem;
            column-gap: 2rem;
    row-gap: 2rem;
  }
  .hosting__h3 {
    grid-column: 1/-1;
  }
}

@media screen and (min-width: 1200px) {
  .hosting {
    -ms-grid-columns: (1fr)[3];
        grid-template-columns: repeat(3, 1fr);
    -ms-grid-rows: auto (1fr)[2];
        grid-template-rows: auto repeat(2, 1fr);
    -webkit-column-gap: 2rem;
            column-gap: 2rem;
    row-gap: 2rem;
  }
  .hosting__h3 {
    grid-column: 1/-1;
  }
}

.activities {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  -ms-grid-rows: auto (1fr)[6];
      grid-template-rows: auto repeat(6, 1fr);
  gap: 15px 0px;
}

.activities__h3 {
  margin-bottom: 20px;
}

.activities #activities__title {
  grid-area: activities__title;
}

.activities #card1 {
  grid-area: card1;
}

.activities #card2 {
  grid-area: card2;
}

.activities #card3 {
  grid-area: card3;
}

.activities #card4 {
  grid-area: card4;
}

.activities #card5 {
  grid-area: card5;
}

.activities #card6 {
  grid-area: card6;
}

@media screen and (min-width: 768px) {
  .activities {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: (1fr)[2];
        grid-template-columns: repeat(2, 1fr);
    -ms-grid-rows: auto (1fr)[3];
        grid-template-rows: auto repeat(3, 1fr);
    grid-gap: 1rem;
        grid-template-areas: "activities__title activities__title" "card1 card2" "card3 card4" "card5 card6";
  }
}
/* ... */

